fix nuget package restore problem in macOS

--- a/samples/Quickstarts/1_ClientCredentials/src/Api/Properties/launchSettings.json
+++ b/samples/Quickstarts/1_ClientCredentials/src/Api/Properties/launchSettings.json
@@ -16,6 +16,7 @@
     },
     "Api": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
