--- a/samples/Quickstarts/3_AspNetCoreAndApis/src/IdentityServer/Properties/launchSettings.json
+++ b/samples/Quickstarts/3_AspNetCoreAndApis/src/IdentityServer/Properties/launchSettings.json
@@ -15,6 +15,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "IdentityServer": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:5000"
+    },
     "SelfHost": {
       "commandName": "Project",
       "environmentVariables": {
