--- a/samples/Quickstarts/1_ClientCredentials/src/Api/Api.csproj
+++ b/samples/Quickstarts/1_ClientCredentials/src/Api/Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(AspNetVersion)" />
   </ItemGroup>
 
 </Project>
