--- a/samples/Quickstarts/1_ClientCredentials/src/IdentityServer/IdentityServer.csproj
+++ b/samples/Quickstarts/1_ClientCredentials/src/IdentityServer/IdentityServer.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="IdentityServer4" />
+    <PackageReference Include="IdentityServer4" Version="3.0.1" />
 
-    <PackageReference Include="Serilog.AspNetCore" />
-    <PackageReference Include="Serilog.Sinks.Console" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
   </ItemGroup>
 </Project>
