--- a/samples/Quickstarts/3_AspNetCoreAndApis/src/IdentityServer/IdentityServer.csproj
+++ b/samples/Quickstarts/3_AspNetCoreAndApis/src/IdentityServer/IdentityServer.csproj
@@ -4,10 +4,15 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
   
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'SelfHost' ">
+    <StartAction>Project</StartAction>
+    <LaunchBrowser></LaunchBrowser>
+    <ApplicationURL>http://localhost:5000</ApplicationURL>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="3.0.1" />
 
-    <PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="3.0.0" />
