--- a/samples/Quickstarts/5_EntityFramework/src/Api/Properties/launchSettings.json
+++ b/samples/Quickstarts/5_EntityFramework/src/Api/Properties/launchSettings.json
@@ -11,10 +11,10 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5001"
     },
     "Api": {
       "commandName": "Project",
