--- a/samples/Quickstarts/5_EntityFramework/src/IdentityServer/Properties/launchSettings.json
+++ b/samples/Quickstarts/5_EntityFramework/src/IdentityServer/Properties/launchSettings.json
@@ -15,8 +15,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SelfHost": {
+    "IdentityServer": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
