--- a/samples/Quickstarts/5_EntityFramework/src/MvcClient/MvcClient.csproj
+++ b/samples/Quickstarts/5_EntityFramework/src/MvcClient/MvcClient.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="$(AspNetVersion)" />
   </ItemGroup>
 
 </Project>
